--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -48,6 +48,7 @@
   display: flex;
   justify-content: center;
   margin: 5rem auto;
+
   .video {
     width: 90%;
     height: auto;
@@ -70,6 +71,7 @@
       max-width: 600px;
       margin-bottom: 3rem;
     }
+
     grid-area: 1 / 1 / 2 / 2;
     position: sticky;
     align-self: flex-start;
@@ -93,15 +95,6 @@
       font-size: 1.5rem;
     }
 
-    .button {
-      width: fit-content;
-      background-color: white;
-      color: black;
-      padding: 1rem 1.5rem;
-      font-size: 1.25rem;
-      font-weight: 600;
-    }
-
     .image {
       width: 100%;
       height: auto;
@@ -119,5 +112,259 @@
     align-self: flex-end;
     grid-area: 2 / 1 / 3 / 2;
     text-align: end;
+  }
+}
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  margin: 4rem auto;
+
+  .title {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 4rem auto;
+    width: 100%;
+
+    span {
+      text-transform: uppercase;
+      font-size: 9vw;
+      font-weight: 500;
+      line-height: 0.95;
+      text-align: end;
+
+      &:first-of-type {
+        text-align: start;
+      }
+    }
+  }
+
+
+  .video {
+    width: 100%;
+    height: auto;
+  }
+
+  .description {
+    display: flex;
+    gap: 5rem;
+    padding: 2rem;
+    align-items: flex-end;
+
+    p {
+      font-size: 1.25rem;
+      width: 50%;
+    }
+  }
+
+  .carousel {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    margin: 10rem auto 0;
+    width: 100%;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 10px;
+
+    // scrollbar custom
+
+    &::-webkit-scrollbar {
+      height: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(128, 128, 128, 0.492);
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: black;
+    }
+
+    .card {
+      width: auto;
+      height: 350px;
+      scroll-snap-align: start;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+
+      // even : height 400px
+      &:nth-child(even) {
+        height: 400px;
+
+      }
+    }
+  }
+
+  .carouselsubtitle {
+    max-width: 500px;
+    margin-left: auto;
+    margin-bottom: 10rem;
+    margin-top: 3rem;
+    margin-right: 2rem;
+  }
+}
+
+
+.faq {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+
+  .faqHeader {
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    min-width: 25%;
+
+    h1 {
+      font-size: 7rem;
+      text-align: center;
+      font-weight: 400;
+    }
+  }
+
+  .faqList {
+    width: 100%;
+  }
+
+  .faqItem {
+    border-bottom: 1px solid white;
+    padding: 1rem 1.5rem;
+
+    &:first-child {
+      border-top: 1px solid white;
+    }
+
+    button {
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+  }
+
+  .question {
+    // background-color: #f2f2f2;
+    background-color: transparent;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    font-size: 1rem;
+    cursor: pointer;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    // transition: background-color 0.3s ease;
+
+    svg {
+      fill: white;
+      width: auto;
+      height: 1.5rem;
+      transform: rotate(-45deg);
+      transition: transform 0.3s ease; /* Smooth transition */
+    }
+  }
+
+  .question:hover {
+    // background-color: #ddd;
+  }
+
+  .answer {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 10px;
+    transition: max-height 0.3s ease-out, padding 0.3s ease-out;
+  }
+
+  .answer.active {
+    max-height: 1000px;
+    /* Un grand nombre pour forcer l'extension */
+    padding: 10px;
+  }
+
+  .faqItem.active .question svg {
+    transform: rotate(0deg); /* Rotate 45° when active */
+  }
+}
+
+
+@media screen and (max-width:768px) {
+  .header {
+    h1 {
+      font-size: 16vw;
+    }
+  }
+
+  .subheader {
+    h3 {
+      font-size: 1rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+
+  .about {
+    display: flex
+    ;
+            flex-direction: column;
+
+    .leftcontent {
+      position: static;
+    }
+  }
+
+  .experience {
+    .title {
+      span {
+        font-size: 7vw;
+      }
+    }
+
+    .description {
+      flex-direction: column;
+      gap: 2rem;
+
+      p {
+        width: 100%;
+      }
+    }
+
+    .carousel {
+      gap: 1rem;
+      padding: 0;
+    }
+
+    .carousel .card {
+      font-size: 1.5rem;
+    }
+
+    .carouselsubtitle {
+      margin: 2rem;
+    }
+  }
+
+  .faq {
+    flex-direction: column;
+
+    .faqHeader {
+      border-left: none;
+      border-bottom: none;
+      h1 {
+        font-size: 5rem;
+      }
+    }
+
+    .faqItem {
+      button {
+        font-size: 1.25rem;
+      }
+    }
   }
 }
