--- a/src/components/SwitchLanguage/SwitchLanguage.module.scss
+++ b/src/components/SwitchLanguage/SwitchLanguage.module.scss
@@ -1,18 +1,11 @@
 .switchLanguage {
-position: fixed;
-top: 500px;
-left: 1600px;
 
-    .languageButton {
-      font-size: 2.5rem; 
-      border: none;
-      background: transparent;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out;
-  
-      &:hover {
-        transform: scale(1.2); 
-      }
-    }
-  }
-  
+.languageSelect {
+  padding: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+}
