--- a/src/styles/billetterie.module.scss
+++ b/src/styles/billetterie.module.scss
@@ -1,3 +1,53 @@
-.billetterie {
-  background-color: #f00;
+.twodiv{
+  display: flex;
+}
+
+.mainContent {
+  margin: 6rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  padding: 3rem;
+}
+
+.form {
+  padding: 2rem;
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border: 1px solid white;
+
+  label {
+      display: flex;
+      flex-direction: column;
+      font-size: 1rem;
+      font-weight: bold;
+  }
+
+  input {
+      background: transparent;
+      border: 1px solid white;
+      color: white;
+      padding: 0.5rem;
+      font-size: 1rem;
+      outline: none;
+  }
+
+  button{
+    font-size: 1rem;
+  }
+
+  .formGroup{
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+
+.required {
+  color: red;
 }
