--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -5,10 +5,24 @@
   justify-content: flex-end;
   gap: 1rem;
   padding: 2rem;
-  background-image: url('/background.png');
+  // background-image: url('/background.png');
   width: 100%;
   background-size: cover;
   background-position: center;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
+
+
+
+ canvas {
+    position: absolute;  
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: -1; 
+    opacity: 0.3;
+  }
+  
 
   h1 {
     font-size: 10vw;
@@ -185,7 +199,7 @@
 
     .card {
       width: auto;
-      height: 350px;
+      height: 300px;
       scroll-snap-align: start;
       background-color: #f0f0f0;
       display: flex;
@@ -196,7 +210,6 @@
       // even : height 400px
       &:nth-child(even) {
         height: 400px;
-
       }
     }
   }
@@ -209,6 +222,46 @@
     margin-right: 2rem;
   }
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  position: relative;
+  text-align: right;
+}
+
+.modalContent img {
+  width: 100%;
+  height: fit-content;
+}
+
+.closeButton {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  mix-blend-mode: difference;
+}
+
+.description {
+  margin-top: 10px;
+  font-size: 16px;
+}
+
 
 
 .faq {
