--- a/src/styles/billetterie.module.scss
+++ b/src/styles/billetterie.module.scss
@@ -1,52 +1,126 @@
-.twodiv{
-  display: flex;
-}
+
 
 .mainContent {
-  margin: 6rem auto;
+  background-image: url('/background.png');
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   color: white;
   padding: 3rem;
+
+  .link {
+    text-decoration: underline;
+  }
 }
 
-.form {
-  padding: 2rem;
-  width: 100%;
-  max-width: 500px;
+.twodiv {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border: 1px solid white;
+  justify-content: center;
+  width: 100%;
+  max-width: 1800px;
 
-  label {
+  .image {
+    background-image: url('/slider4.webp');
+    width: 30%;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .form {
+    background-color: black;
+    padding: 2rem;
+    width: 70%;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: 1px solid white;
+
+    .header {
+      p {
+        font-size: 1.3rem;
+      }
+    }
+
+    label {
       display: flex;
       flex-direction: column;
       font-size: 1rem;
       font-weight: bold;
-  }
+      width: 100%;
+      gap: 0.5rem;
+    }
 
-  input {
+   select, input {
       background: transparent;
       border: 1px solid white;
       color: white;
       padding: 0.5rem;
       font-size: 1rem;
-      outline: none;
-  }
+    }
 
-  button{
-    font-size: 1rem;
-  }
+    button {
+      font-size: 1.1rem;
+      font-weight: bold;
+      align-self: flex-end;
+      cursor: pointer;
+      border: none;
+    }
 
-  .formGroup{
-    display: flex;
-    gap: 2rem;
+    .formGroup {
+      display: flex;
+      gap: 2rem;
+    }
+
+    .counter {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    
+      button {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid white;
+        background: transparent;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.3s;
+    
+        &.disabled {
+          border-color: grey;
+          color: grey;
+          cursor: not-allowed;
+        }
+      }
+    
+      input {
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border: 1px solid white;
+        background: black;
+        color: white;
+        font-weight: bold;
+      }
+    }
+    
   }
 }
 
+.messageGroup {
+  color: grey;
+  margin-top: 10px;
+}
 
 .required {
   color: red;
