--- a/src/styles/end.module.scss
+++ b/src/styles/end.module.scss
@@ -9,6 +9,9 @@
     align-items: center;
     height: 95vh;
 
+    h1{
+        text-transform: uppercase;
+    }
 
 .details {
     margin-top: 30px;
