--- a/src/styles/billetterie.module.scss
+++ b/src/styles/billetterie.module.scss
@@ -3,7 +3,7 @@
 .mainContent {
   background-image: url('/background.png');
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -11,7 +11,7 @@
   align-items: center;
   flex-direction: column;
   color: white;
-  padding: 3rem;
+  padding: 6rem 3rem;
 
   .link {
     text-decoration: underline;
@@ -44,7 +44,7 @@
 
     .header {
       p {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
       }
     }
 
@@ -66,7 +66,7 @@
     }
 
     button {
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: bold;
       align-self: flex-end;
       cursor: pointer;
@@ -120,6 +120,7 @@
 .messageGroup {
   color: grey;
   margin-top: 10px;
+  font-size: 0.8rem;
 }
 
 .required {
