--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -14,6 +14,10 @@
         padding: 1rem 1.5rem;
         max-height: 70px;
 
+        p {
+            padding: 8px;
+        }
+
         .logo {
             display: flex;
             align-items: center;
@@ -34,4 +38,99 @@
         flex-direction: column;
         font-weight: 600;
     }
+}
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 15px;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    font-size: 1.5rem;
+    z-index: 1000;
+    margin-left: auto;
+
+    svg {
+        height: 20px;
+        width: 20px;
+    }
+}
+
+.responsiveLogo {
+    display: none;
+}
+
+.responsiveNavbar {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .responsiveLogo {
+        display: flex;
+        z-index: 1000;
+        align-items: center;
+        height: fit-content;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+
+        img {
+            width: auto;
+        }
+    }
+
+    .responsiveNavbar {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: fit-content;
+        color: black;
+        background-color: white;
+        z-index: 1000;
+
+        select,
+        option,
+        button {
+            color: black;
+        }
+
+
+
+        .section {
+            display: flex;
+
+            padding: 20px;
+            gap: 10px;
+            flex-direction: column;
+
+
+        }
+
+        .links {
+            background-color: #fff;
+            padding: 20px;
+            color: black;
+            display: flex;
+            flex-direction: column;
+            border-top: 1px solid black;
+            font-weight: 600;
+            gap: 10px;
+        }
+    }
+
 }
