--- a/src/components/SwitchLanguage/SwitchLanguage.module.scss
+++ b/src/components/SwitchLanguage/SwitchLanguage.module.scss
@@ -1,11 +1,16 @@
 .switchLanguage {
 
-.languageSelect {
-  padding: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-}
+  .languageSelect {
+    padding: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+
+    @media screen and (max-width: 768px) {
+      padding: 0;
+
+    }
+  }
 
 }
