--- a/src/styles/conditions-generales-de-vente.module.scss
+++ b/src/styles/conditions-generales-de-vente.module.scss
@@ -29,3 +29,22 @@
         margin-bottom: 1rem;
     }
    }
+
+
+   @media screen and (max-width: 768px) {
+    .cgv {
+        padding: 1rem;
+        font-size: 1rem;
+        padding-top: 3rem;
+        gap: 0.5rem;
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+        }
+    }
+    
+   }
