--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -13,16 +13,16 @@
 
 
 
- canvas {
-    position: absolute;  
+  canvas {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100% !important;
     height: 100% !important;
-    z-index: -1; 
+    z-index: -1;
     opacity: 0.3;
   }
-  
+
 
   h1 {
     font-size: 10vw;
@@ -239,11 +239,16 @@
 .modalContent {
   position: relative;
   text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .modalContent img {
-  width: 100%;
-  height: fit-content;
+  width: auto;
+  margin: 0 auto;
+  height: 80vh;
+  max-width: 90vw;
 }
 
 .closeButton {
@@ -257,9 +262,10 @@
   mix-blend-mode: difference;
 }
 
-.description {
+.modalContent .description {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 0.9rem;
+  max-width: 400px;
 }
 
 
@@ -319,7 +325,8 @@
       width: auto;
       height: 1.5rem;
       transform: rotate(-45deg);
-      transition: transform 0.3s ease; /* Smooth transition */
+      transition: transform 0.3s ease;
+      /* Smooth transition */
     }
   }
 
@@ -341,7 +348,8 @@
   }
 
   .faqItem.active .question svg {
-    transform: rotate(0deg); /* Rotate 45° when active */
+    transform: rotate(0deg);
+    /* Rotate 45° when active */
   }
 }
 
@@ -353,7 +361,14 @@
     }
   }
 
+  .teaser {
+    margin: 1rem auto;
+  }
+
   .subheader {
+    margin: 3rem auto;
+    gap: 1rem;
+
     h3 {
       font-size: 1rem;
     }
@@ -364,25 +379,37 @@
   }
 
   .about {
-    display: flex
-    ;
-            flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 20px;
 
     .leftcontent {
       position: static;
+
+      h3 {
+        margin-bottom: 1rem;
+      }
+    }
+
+    .rightcontent {
+      gap: 2rem;
     }
   }
 
   .experience {
     .title {
+      margin: 0;
+      padding: 20px;
       span {
-        font-size: 7vw;
+        font-size: 2rem;
       }
     }
 
     .description {
       flex-direction: column;
       gap: 2rem;
+      padding: 20px;
 
       p {
         width: 100%;
@@ -390,6 +417,7 @@
     }
 
     .carousel {
+      margin: 1rem auto;
       gap: 1rem;
       padding: 0;
     }
@@ -403,20 +431,29 @@
     }
   }
 
+  .modalContent {
+    max-width: 90vw;
+  }
+
   .faq {
     flex-direction: column;
 
     .faqHeader {
       border-left: none;
       border-bottom: none;
+
       h1 {
         font-size: 5rem;
+        text-align: left;
+        margin-left: 15px
       }
     }
 
     .faqItem {
+      padding: 15px;
       button {
-        font-size: 1.25rem;
+        padding: 0;
+        font-size: 1rem;
       }
     }
   }
