--- a/src/styles/mentions-legales.module.scss
+++ b/src/styles/mentions-legales.module.scss
@@ -1,6 +1,6 @@
 .ml {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     height: 100%;
     padding: 4rem;
     font-size: 1.1rem;
@@ -32,4 +32,21 @@
     li {
         list-style: none;
     }
+}
+
+@media screen and (max-width: 768px) {
+    .ml {
+        padding: 1rem;
+        padding-top: 3rem;
+        font-size: 1rem;
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+        }
+    }
+
 }
