--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -10,6 +10,14 @@
     z-index: 1000;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
 
+    select {
+        appearance: none;
+        background-color: transparent;
+        border: none;
+        color: #fff;
+        font-size: 1rem;
+    }
+
     .section {
         padding: 1rem 1.5rem;
         max-height: 70px;
