--- a/src/styles/billetterie.module.scss
+++ b/src/styles/billetterie.module.scss
@@ -14,6 +14,39 @@
   .link {
     text-decoration: underline;
   }
+
+
+  .dateSelect {
+    padding: 0.5rem;
+    border: 1px solid white;
+    position: relative;
+
+    input,
+    select {
+      width: 100%;
+      color: white;
+      border: none !important;
+      padding: 0 !important;
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      border-radius: 0;
+      font-size: 1rem;
+      background-color: transparent;
+    }
+
+    svg {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 10px;
+      width: 10px;
+      fill: white;
+    }
+  }
+
+
 }
 
 .twodiv {
@@ -23,11 +56,17 @@
   max-width: 1800px;
 
   .image {
-    background-image: url('/slider4.webp');
-    width: 30%;
-    height: auto;
-    background-size: cover;
-    background-position: center;
+    // height: 100%;
+    width: auto;
+    max-height: 80vh;
+    // max-width: 300px;
+    // background-image: url('/affiche.jpg');
+    // width: 30%;
+    // height: auto;
+    // background-size: contain;
+    // background-position: center;
+    // background-repeat: no-repeat;
+
   }
 
   .form {
@@ -39,13 +78,14 @@
     flex-direction: column;
     gap: 1rem;
     border: 1px solid white;
+    height: fit-content;
 
     .header {
       p {
         font-size: 1.2rem;
       }
 
-      span{
+      span {
         font-size: 0.9rem;
       }
     }
@@ -59,18 +99,17 @@
       gap: 0.5rem;
     }
 
-    select,
     input {
-      background-color: rgba(0,0,0,0);
+      background-color: rgba(0, 0, 0, 0);
       border: 1px solid white;
       padding: 0.5rem;
       font-size: 1rem;
       color: white;
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
     }
 
-    input[type="date"]::-webkit-calendar-picker-indicator {
-      filter: invert(1); 
-    }
 
     button {
       font-size: 1rem;
@@ -134,11 +173,25 @@
   color: red;
 }
 
+@media screen and (max-width: 1024px) {
 
+  .mainContent {
+    min-height: 100%;
+  }
+  .twodiv {
+    width: 100%;
+
+    .image {
+      height: 100%;
+      // width: 100%;
+      max-width: 250px;
+    }
+  }
+}
 
 @media screen and (max-width: 768px) {
 
- 
+
 
 
   .mainContent {
@@ -147,11 +200,13 @@
   }
 
   .twodiv {
-    flex-direction: column;
+    flex-direction: column-reverse;
 
     .image {
       width: 100%;
-      height: 300px;
+      max-width: 100%;
+      height: auto;
+      max-height: 100%;
     }
 
     .form {
@@ -164,6 +219,7 @@
           font-size: 1.5rem;
           margin-bottom: 10px;
         }
+
         p {
           font-size: 1rem;
         }
