--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: 'TWKEverett';
-  src: url('../fonts/TWKEverett.ttf') format('ttf');
+  src: url('../fonts/TWKEverett.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -88,4 +88,9 @@ button, input, textarea, select, a, option, optgroup {
   overflow: hidden;
   height: 100% !important;
   width: 100% !important;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1) !important;
+  // background-color: yellow !important;
 }
