fix background, video expo and settings gsap index

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -73,10 +73,11 @@
   justify-content: center;
   margin: 5rem auto;
 
-  .video {
+  video {
     width: 90%;
     height: auto;
     margin: 0 auto;
+    border: 1px solid white;
   }
 }
 
