--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,6 +46,12 @@ button, input, textarea, select, a, option, optgroup {
   font-family: inherit;
 }
 
+select{
+  option{
+    color: black;
+  }
+}
+
 .button {
   width: fit-content;
   height: fit-content;
