--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -45,6 +45,10 @@
         display: flex;
         flex-direction: column;
         font-weight: 600;
+
+        a {
+            padding: 5px;
+        }
     }
 }
 
@@ -137,6 +141,9 @@
             border-top: 1px solid black;
             font-weight: 600;
             gap: 10px;
+            a {
+                padding: 5px;
+            }
         }
     }
 
