--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'TWKEverett';
   src: url('../fonts/TWKEverett.woff') format('woff');
@@ -8,7 +7,11 @@
 
 @font-face {
   font-family: 'Aurora';
-  src: url('../fonts/Aurora-gx4V6.woff') format('woff');
+  src:
+  url('../fonts/Aurora.woff2') format('woff2'),
+    url('../fonts/Aurora.woff') format('woff'),
+    url('../fonts/Aurora.otf') format('opentype'),
+    url('../fonts/Aurora.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -42,12 +45,18 @@ a {
   text-decoration: none;
 }
 
-button, input, textarea, select, a, option, optgroup {
+button,
+input,
+textarea,
+select,
+a,
+option,
+optgroup {
   font-family: inherit;
 }
 
-select{
-  option{
+select {
+  option {
     color: black;
   }
 }
