--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -41,8 +41,9 @@
   flex-direction: column;
   max-width: 1200px;
   margin: 10rem auto;
+  padding: 0 2rem;
 
-  h3 {
+  h2 {
     opacity: 0.7;
     text-align: center;
     font-weight: 400;
@@ -93,7 +94,7 @@
 
 
   .leftcontent {
-    h3 {
+    h2 {
       font-size: 2rem;
       max-width: 600px;
       margin-bottom: 3rem;
@@ -117,7 +118,7 @@
       font-size: 1.25rem;
     }
 
-    h4 {
+    .highlight {
       font-weight: 700;
       font-size: 1.5rem;
     }
@@ -387,7 +388,7 @@
     gap: 1rem;
     padding: 2rem;
 
-    h3 {
+    h2 {
       font-size: 1rem;
     }
 
@@ -409,7 +410,7 @@
     .leftcontent {
       position: static;
 
-      h3 {
+      h2 {
         margin-bottom: 1rem;
       }
     }
